--- a/resume.html
+++ b/resume.html
@@ -4,33 +4,253 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Resume | Fatemeh Karam</title>
+  <meta name="description" content="Web resume of Fatemeh Karam. Download PDF for applications." />
+
   <style>
-    :root{--bg:#f4f6f8;--card:#fff;--text:#1f2937;--muted:#4b5563;--line:#e5e7eb;--shadow:0 2px 10px rgba(0,0,0,.08);--radius:14px;--max:980px}
-    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.55}
-    a{color:inherit} .wrap{max-width:var(--max);margin:0 auto;padding:28px 16px 60px}
-    header,.card{background:var(--card);border:1px solid var(--line);box-shadow:var(--shadow);border-radius:var(--radius)}
-    header{padding:22px 18px;margin-bottom:18px}
-    h1{margin:0;font-size:26px} .tagline{margin:6px 0 0;color:var(--muted)}
-    nav{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:14px;padding-top:14px;border-top:1px solid var(--line)}
-    .navlink{text-decoration:none;border:1px solid var(--line);padding:8px 10px;border-radius:999px;background:#fff}
-    .grid{display:grid;grid-template-columns:1fr;gap:14px}
-    .card{padding:18px}
-    h2{margin:0 0 10px;font-size:18px} h3{margin:14px 0 8px;font-size:16px}
-    ul{margin:8px 0 0 18px} li{margin:6px 0}
-    .small{font-size:13px;color:var(--muted)}
-    .btn{display:inline-block;text-decoration:none;border:1px solid var(--line);padding:10px 12px;border-radius:10px;background:#fff}
-    .btnrow{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    footer{margin-top:16px;text-align:center;color:var(--muted);font-size:13px}
+    :root{
+      --bg:#f6f7fb;
+      --card:#ffffff;
+      --text:#111827;
+      --muted:#6b7280;
+      --line:rgba(229,231,235,.95);
+      --shadow:0 10px 30px rgba(0,0,0,.08);
+      --shadow2:0 16px 40px rgba(0,0,0,.12);
+      --radius:16px;
+      --max:1024px;
+      --focus:rgba(59,130,246,.35);
+      --accent:rgba(147,197,253,.85);
+    }
+
+    body.dark{
+      --bg:#0b1220;
+      --card:rgba(17,24,39,.92);
+      --text:#e5e7eb;
+      --muted:#9ca3af;
+      --line:rgba(255,255,255,.12);
+      --shadow:0 14px 40px rgba(0,0,0,.45);
+      --shadow2:0 18px 50px rgba(0,0,0,.55);
+      --accent:rgba(59,130,246,.4);
+      --focus:rgba(99,102,241,.4);
+    }
+
+    *{box-sizing:border-box}
+
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--text);
+      line-height:1.6;
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(238,242,255,.9), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(236,254,255,.8), transparent 60%),
+        var(--bg);
+    }
+    body.dark{
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(59,130,246,.18), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(99,102,241,.14), transparent 60%),
+        var(--bg);
+    }
+
+    a{color:inherit}
+    .wrap{max-width:var(--max); margin:0 auto; padding:34px 16px 72px;}
+
+    header{
+      background:var(--card);
+      border:1px solid var(--line);
+      box-shadow:var(--shadow);
+      border-radius:var(--radius);
+      padding:22px 18px;
+      margin-bottom:16px;
+      backdrop-filter: blur(10px);
+    }
+
+    .top{
+      display:flex;
+      gap:14px;
+      align-items:flex-start;
+      justify-content:space-between;
+      flex-wrap:wrap;
+    }
+
+    h1{
+      margin:0;
+      font-size:30px;
+      letter-spacing:-0.35px;
+      line-height:1.15;
+    }
+
+    .tagline{
+      margin:8px 0 0;
+      color:var(--muted);
+      font-size:15px;
+    }
+
+    .small{font-size:13px; color:var(--muted)}
+    .muted{color:var(--muted)}
+
+    nav{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+      margin-top:14px;
+      padding-top:14px;
+      border-top:1px solid var(--line);
+    }
+
+    .navlink{
+      text-decoration:none;
+      border:1px solid var(--line);
+      padding:8px 10px;
+      border-radius:999px;
+      background:rgba(255,255,255,.75);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease, border-color .12s ease;
+    }
+    body.dark .navlink{background:rgba(255,255,255,.06)}
+    .navlink:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+    .navlink[aria-current="page"]{
+      border-color: var(--accent);
+      box-shadow: 0 10px 20px rgba(0,0,0,.10);
+      font-weight:700;
+    }
+
+    .grid{display:grid; grid-template-columns:1fr; gap:14px;}
+
+    .card{
+      background:var(--card);
+      border:1px solid var(--line);
+      box-shadow:var(--shadow);
+      border-radius:var(--radius);
+      padding:18px;
+      backdrop-filter: blur(10px);
+      transition: transform .14s ease, box-shadow .14s ease, border-color .14s ease;
+    }
+    .card:hover{
+      transform: translateY(-2px);
+      box-shadow: var(--shadow2);
+      border-color: rgba(147,197,253,.55);
+    }
+    body.dark .card:hover{border-color: rgba(99,102,241,.35)}
+
+    h2{margin:0 0 10px; font-size:20px; letter-spacing:-0.2px}
+    h3{margin:14px 0 8px; font-size:16px}
+    p{margin:0 0 10px}
+    ul{margin:8px 0 0 18px}
+    li{margin:6px 0}
+
+    .btnrow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:10px;
+      justify-content:flex-end;
+    }
+
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      text-decoration:none;
+      border:1px solid var(--line);
+      padding:10px 12px;
+      border-radius:12px;
+      background:rgba(255,255,255,.8);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease;
+      cursor:pointer;
+    }
+    body.dark .btn{background:rgba(255,255,255,.06)}
+    .btn:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+
+    .btn:focus, .navlink:focus{
+      outline:3px solid var(--focus);
+      outline-offset:2px;
+    }
+
+    .pillrow{display:flex; gap:8px; flex-wrap:wrap; margin-top:10px}
+    .chip{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 10px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.7);
+      color:var(--muted);
+      font-size:13px;
+    }
+    body.dark .chip{background:rgba(255,255,255,.06)}
+
+    .twocol{
+      display:grid;
+      grid-template-columns:1fr;
+      gap:14px;
+    }
+    @media (min-width: 860px){
+      .twocol{grid-template-columns:1.05fr .95fr;}
+    }
+
+    /* role blocks */
+    .role{
+      border:1px solid var(--line);
+      border-radius:14px;
+      padding:14px;
+      background:rgba(255,255,255,.55);
+      margin-top:12px;
+    }
+    body.dark .role{background:rgba(255,255,255,.05)}
+    .meta{font-size:13px; color:var(--muted); margin:6px 0 10px}
+
+    /* reveal animation */
+    .reveal{
+      opacity:0;
+      transform: translateY(8px);
+      transition: opacity .5s ease, transform .5s ease;
+    }
+    .reveal.show{
+      opacity:1;
+      transform: translateY(0);
+    }
+
+    footer{
+      margin-top:18px;
+      text-align:center;
+      color:var(--muted);
+      font-size:13px;
+    }
   </style>
 </head>
+
 <body>
   <div class="wrap">
 
-    <header>
-      <h1>Resume</h1>
-      <p class="tagline">Web version · Download PDF for applications</p>
+    <header class="reveal">
+      <div class="top">
+        <div>
+          <h1>Resume</h1>
+          <p class="tagline">Web version · Download PDF for applications</p>
+          <div class="pillrow">
+            <span class="chip">📌 Burnaby, BC</span>
+            <span class="chip">🌐 English & Persian</span>
+            <span class="chip">💻 Linux & Windows</span>
+          </div>
+        </div>
 
-      <nav>
+        <div class="btnrow" aria-label="Primary links">
+          <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank" rel="noopener">🔗 LinkedIn</a>
+          <a class="btn" href="https://github.com/FatemehKaram/" target="_blank" rel="noopener">💻 GitHub</a>
+          <a class="btn" href="mailto:karam.fatemeh@yahoo.com">✉️ Email</a>
+          <button class="btn" id="themeBtn" type="button" aria-label="Toggle theme">🌙 Theme</button>
+        </div>
+      </div>
+
+      <nav aria-label="Site navigation">
         <a class="navlink" href="index.html">Home</a>
         <a class="navlink" href="projects.html">Projects</a>
         <a class="navlink" href="experience.html">Experience</a>
@@ -42,15 +262,18 @@
 
     <div class="grid">
 
-      <section class="card">
+      <section class="card reveal">
         <h2>Download</h2>
-        <p class="small">Upload your PDF as <code>resume.pdf</code> in the repo to enable this link.</p>
-        <div class="btnrow">
-          <a class="btn" href="resume.pdf" target="_blank" rel="noopener">Download resume (PDF)</a>
+        <p class="small">
+          Upload your PDF as <code>resume.pdf</code> in the repo root to enable the download link.
+        </p>
+        <div class="btnrow" style="justify-content:flex-start;">
+          <a class="btn" href="resume.pdf" target="_blank" rel="noopener">⬇️ Download resume (PDF)</a>
+          <a class="btn" href="projects.html">✨ View projects</a>
         </div>
       </section>
 
-      <section class="card">
+      <section class="card reveal">
         <h2>Professional summary</h2>
         <p>
           Technical professional with experience in backend development, data analytics, and cybersecurity.
@@ -59,44 +282,71 @@
         </p>
       </section>
 
-      <section class="card">
-        <h2>Key skills</h2>
-        <ul>
-          <li>Python (Pandas, NumPy, Matplotlib), SQL (MySQL, SQLite)</li>
-          <li>Data cleaning, EDA, dashboards, storytelling</li>
-          <li>Threat intelligence, OSINT APIs, Linux security</li>
-          <li>Backend: Flask, PHP (CodeIgniter), Git workflows</li>
-          <li>Tools: Jupyter, IBM Cognos, VMware/VirtualBox</li>
-        </ul>
+      <section class="twocol">
+        <section class="card reveal">
+          <h2>Key skills</h2>
+          <ul>
+            <li>Python (Pandas, NumPy, Matplotlib), SQL (MySQL, SQLite)</li>
+            <li>Data cleaning, EDA, dashboards, storytelling</li>
+            <li>Threat intelligence, OSINT APIs, Linux security</li>
+            <li>Backend: Flask, PHP (CodeIgniter), Git workflows</li>
+            <li>Tools: Jupyter, IBM Cognos, VMware/VirtualBox</li>
+          </ul>
+        </section>
+
+        <section class="card reveal">
+          <h2>Education & credentials</h2>
+          <ul>
+            <li><strong>M.S. Cybersecurity</strong> — NYIT Vancouver (May 2024)</li>
+            <li><strong>NPower</strong> — Junior Data Analyst Program (Oct 2025 – Jan 2026)</li>
+            <li><strong>IBM</strong> — Data Analyst Professional Certificate (Coursera)</li>
+            <li><strong>Microsoft</strong> — Azure AI-900</li>
+            <li><strong>LPIC-1</strong> — Linux (Aug 2022)</li>
+          </ul>
+          <div class="btnrow" style="justify-content:flex-start;">
+            <a class="btn" href="certifications.html">🎓 More details</a>
+          </div>
+        </section>
       </section>
 
-      <section class="card">
+      <section class="card reveal">
         <h2>Experience</h2>
 
-        <h3>IT Support Specialist — Boomerang Rayaneh Company</h3>
-        <p class="small">Sep 2019 – Jul 2022 · Tehran, Iran</p>
-        <ul>
-          <li>Improved virtualization provisioning and resource allocation; sped up environment setup.</li>
-          <li>Coordinated updates, security patches, and backups to reduce downtime and improve stability.</li>
-          <li>Applied ITSM troubleshooting and documentation practices to reduce repeat incidents.</li>
-        </ul>
+        <div class="role">
+          <h3>IT Support Specialist — Boomerang Rayaneh Company</h3>
+          <div class="meta">Sep 2019 – Jul 2022 · Tehran, Iran</div>
+          <ul>
+            <li>Improved virtualization provisioning and resource allocation; sped up environment setup.</li>
+            <li>Coordinated updates, security patches, and backups to reduce downtime and improve stability.</li>
+            <li>Applied ITSM troubleshooting and documentation practices to reduce repeat incidents.</li>
+          </ul>
+        </div>
 
-        <h3>Web Developer & Database Administrator — Boomerang Rayaneh Company</h3>
-        <p class="small">Mar 2011 – Sep 2019 · Tehran, Iran</p>
-        <ul>
-          <li>Built and maintained PHP/MySQL applications; improved performance via efficient coding and indexing.</li>
-          <li>Optimized MySQL through slow query analysis, tuning, and server configuration improvements.</li>
-          <li>Deployed and managed Linux servers; improved reliability through monitoring and optimization.</li>
-        </ul>
+        <div class="role">
+          <h3>Web Developer & Database Administrator — Boomerang Rayaneh Company</h3>
+          <div class="meta">Mar 2011 – Sep 2019 · Tehran, Iran</div>
+          <ul>
+            <li>Built and maintained PHP/MySQL applications; improved performance via efficient coding and indexing.</li>
+            <li>Optimized MySQL through slow query analysis, tuning, and server configuration improvements.</li>
+            <li>Deployed and managed Linux servers; improved reliability through monitoring and optimization.</li>
+          </ul>
+        </div>
 
-        <h3>IT Technician — Arayeh Negar Pishrow Company</h3>
-        <p class="small">Jul 2005 – Feb 2008 · Tehran, Iran</p>
-        <ul>
-          <li>Supported IT system upgrades and software deployments; produced documentation and user support.</li>
-        </ul>
+        <div class="role">
+          <h3>IT Technician — Arayeh Negar Pishrow Company</h3>
+          <div class="meta">Jul 2005 – Feb 2008 · Tehran, Iran</div>
+          <ul>
+            <li>Supported IT system upgrades and software deployments; produced documentation and user support.</li>
+          </ul>
+        </div>
+
+        <div class="btnrow" style="justify-content:flex-start;">
+          <a class="btn" href="experience.html">🧰 Experience page</a>
+          <a class="btn" href="contact.html">🤝 Contact</a>
+        </div>
       </section>
 
-      <section class="card">
+      <section class="card reveal">
         <h2>Projects</h2>
         <ul>
           <li>Threat Intelligence Assistant (RAG + OSINT) — <a href="projects.html#threat-intel-assistant">Details</a></li>
@@ -107,11 +357,46 @@
 
     </div>
 
-    <footer>
+    <footer class="reveal">
       © <span id="y"></span> Fatemeh Karam · Resume
     </footer>
 
   </div>
-  <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
+
+  <script>
+    // Footer year
+    document.getElementById("y").textContent = new Date().getFullYear();
+
+    // Theme toggle (saved in localStorage)
+    const themeKey = "theme";
+    const savedTheme = localStorage.getItem(themeKey);
+    if (savedTheme === "dark") document.body.classList.add("dark");
+
+    const themeBtn = document.getElementById("themeBtn");
+    if (themeBtn) {
+      const setBtn = () => themeBtn.textContent = document.body.classList.contains("dark") ? "☀️ Theme" : "🌙 Theme";
+      setBtn();
+
+      themeBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark");
+        localStorage.setItem(themeKey, document.body.classList.contains("dark") ? "dark" : "light");
+        setBtn();
+      });
+    }
+
+    // Active nav highlighting
+    const here = (location.pathname.split("/").pop() || "index.html").toLowerCase();
+    document.querySelectorAll("nav a.navlink").forEach(a => {
+      const target = (a.getAttribute("href") || "").split("/").pop().toLowerCase();
+      if (target === here) a.setAttribute("aria-current", "page");
+    });
+
+    // Reveal animations on scroll
+    const io = new IntersectionObserver((entries) => {
+      entries.forEach(e => { if (e.isIntersecting) e.target.classList.add("show"); });
+    }, { threshold: 0.12 });
+
+    document.querySelectorAll(".reveal").forEach(el => io.observe(el));
+  </script>
 </body>
 </html>
